# jssh

./: .editorconfig  .gitignore  .golangci.yml  Cargo.toml  LICENSE  Makefile  README.md  build.js  builtin_cli_module.go  builtin_fs_module.go  builtin_global.go  builtin_http_module.go  builtin_path_module.go  go.mod  go.sum  jssh.d.ts  main.go  package-lock.json  package.json  repl.js  util.go
.github/workflows/: build-release.yml  codeql-analysis.yml
crates/core/: Cargo.toml  script_module.js
crates/jssh/: Cargo.toml
crates/jssh_core/: Cargo.toml
crates/qjs_example/: Cargo.toml
example/: config.json  config.toml  config.txt  config.yaml  hello.js  nslookup.js  test.js  test_mod.js  test_require.js  test_require2.js
internal/jsbuiltin/: 00_module.js  01_assert.js  01_cli.js  01_console.js  01_exec.js  01_fs.js  01_global.js  01_log.js  99_bootstrap.js  all.go  builtin_0.js  builtin_cli.js  builtin_console.js  builtin_global.js  builtin_log.js  cli.js  jsbuiltin.go  jsfs.go  log.js  moment-with-locales.min.js
internal/jsexecutor/: jsexecutor.go  jsexecutor_test.go
internal/jsshcmd/: builtin_cli_module.go  builtin_encode.go  builtin_exec.go  builtin_fs_module.go  builtin_global.go  main.go  (+21 more)
jssh-rs/: .rustfmt.toml  Cargo.toml  README.md  build.sh
jssh-rs/examples/: hello.js
jssh-rs/src/: context.rs  error.rs  main.rs
jssh-rs/src/runtime/js/: 00_jssh.js  10_deepmerge.js  10_format.js  20_assert.js  20_cli.js  20_fs.js  20_http.js  20_log.js  20_path.js  20_socket.js  core.js
quickjs/: quickjs.c  quickjs.go  quickjs_test.go  version.h
scripts/: build-release.sh  go-mini-build.sh  update-build-info.sh
test/: test.js
(+44 files in other folders)
