[package]
name = "jssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-js = { version = "0.4.1", features = ["bigint", "patched", "num-traits", "num-bigint", "log", "chrono"] }
clap = "3.0.0-beta.4"
anyhow = "1.0.44"

[profile.release.package.quick-js]
opt-level = 3
