cargo-features = ["strip"]

[package]
name = "jssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-js = { version = "0.4.1", features = ["bigint", "patched", "num-traits", "num-bigint", "log", "chrono"] }
clap = "3.2.15"
anyhow = "1.0.57"
log = "0.4.17"
env_logger = "0.9.0"
wasmer = "2.3.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
dirs = "4.0.0"

# See https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
